# audio-stems-splitter

./: .gitignore  README.md  main.py  pyproject.toml
api/: routes.py
model/: chunking.py  config.py  hdemucs.py
notebooks/: metrics.ipynb  separate_stem.ipynb
