[project]
name = "audio-stem-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "demucs>=4.0.1",
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "stempeg>=0.2.6",
    "torch>=2.11.0",
]
